Added control-label class to forms

--- a/avAdmin/admin-directives/question/question.html
+++ b/avAdmin/admin-directives/question/question.html
@@ -16,7 +16,7 @@
 
             <!-- title -->
             <div class="form-group">
-                <label class="col-sm-2" for="title" ng-i18next="avAdmin.basic.title.label"></label>
+                <label class="col-sm-2 control-label" for="title" ng-i18next="avAdmin.basic.title.label"></label>
                 <div class="col-sm-10">
                     <input id="title" class="form-control" type="text" ng-i18next="[placeholder]avAdmin.basic.title.placeholder" ng-model="q.title"/>
                 </div>
@@ -24,7 +24,7 @@
 
             <!-- description -->
             <div class="form-group">
-                <label class="col-sm-2" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
+                <label class="col-sm-2 control-label" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
                 <div class="col-sm-10">
                     <textarea id="desc" class="form-control" ng-i18next="[placeholder]avAdmin.basic.description.placeholder" ng-model="q.description"></textarea>
                 </div>
@@ -32,7 +32,7 @@
 
             <!-- voting system -->
             <div class="form-group">
-                <label class="col-sm-2" for="voting" ng-i18next>avAdmin.questions.votingSystem</label>
+                <label class="col-sm-2 control-label" for="voting" ng-i18next>avAdmin.questions.votingSystem</label>
                 <div class="col-sm-10">
                     <div class="radio" ng-repeat="o in vsystems">
                         <label>
@@ -45,7 +45,7 @@
 
             <!-- number of winners -->
             <div class="form-group">
-                <label class="col-sm-2" for="winners" ng-i18next>avAdmin.questions.winners.label</label>
+                <label class="col-sm-2 control-label" for="winners" ng-i18next>avAdmin.questions.winners.label</label>
                 <div class="col-sm-10">
                     <p class="text-muted" ng-i18next>avAdmin.questions.winners.placeholder</p>
                     <div class="input-group col-xs-2">
@@ -66,7 +66,7 @@
 
             <!-- Minium -->
             <div class="form-group">
-                <label class="col-sm-2" for="winners" ng-i18next>avAdmin.questions.min.label</label>
+                <label class="col-sm-2 control-label" for="winners" ng-i18next>avAdmin.questions.min.label</label>
                 <div class="col-sm-10">
                     <p class="text-muted" ng-i18next> avAdmin.questions.min.placeholder </p>
                     <div class="input-group col-xs-2">
@@ -87,7 +87,7 @@
 
             <!-- Maximum -->
             <div class="form-group">
-                <label class="col-sm-2" for="winners" ng-i18next>avAdmin.questions.max.label</label>
+                <label class="col-sm-2 control-label" for="winners" ng-i18next>avAdmin.questions.max.label</label>
                 <div class="col-sm-10">
                     <p class="text-muted" ng-i18next> avAdmin.questions.max.placeholder </p>
                     <div class="input-group col-xs-2">
@@ -108,7 +108,7 @@
 
             <!-- Randomize -->
             <div class="form-group">
-                <label class="col-sm-2" for="random" ng-i18next>avAdmin.questions.random.label</label>
+                <label class="col-sm-2 control-label" for="random" ng-i18next>avAdmin.questions.random.label</label>
                 <div class="col-sm-10">
                     <div class="checkbox">
                         <label>
@@ -121,7 +121,7 @@
 
             <!-- Candidates -->
             <div class="form-group">
-                <label class="col-sm-2" for="candidates" ng-i18next>avAdmin.questions.candidates.label</label>
+                <label class="col-sm-2 control-label" for="candidates" ng-i18next>avAdmin.questions.candidates.label</label>
                 <div class="col-sm-10">
                     <p class="text-muted" ng-i18next>
                         avAdmin.questions.candidates.placeholder
