--- a/avAdmin/admin-directives/elbasic/elbasic.html
+++ b/avAdmin/admin-directives/elbasic/elbasic.html
@@ -6,7 +6,7 @@
     <form role="form" class="form form-horizontal">
         <!-- title -->
         <div class="form-group">
-            <label class="col-sm-2" for="title" ng-i18next="avAdmin.basic.title.label"></label>
+            <label class="col-sm-2 control-label" for="title" ng-i18next="avAdmin.basic.title.label"></label>
             <div class="col-sm-10">
                 <input id="title" class="form-control" type="text" ng-i18next="[placeholder]avAdmin.basic.title.placeholder" ng-model="election.title"/>
             </div>
@@ -14,7 +14,7 @@
 
         <!-- description -->
         <div class="form-group">
-            <label class="col-sm-2" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
+            <label class="col-sm-2 control-label" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
             <div class="col-sm-10">
                 <textarea id="desc" class="form-control" ng-i18next="[placeholder]avAdmin.basic.description.placeholder" ng-model="election.description"></textarea>
             </div>
@@ -25,7 +25,7 @@
 
         <!-- layout -->
         <div class="form-group">
-            <label class="col-sm-2" for="layout" ng-i18next="avAdmin.basic.layout.label"></label>
+            <label class="col-sm-2 control-label" for="layout" ng-i18next="avAdmin.basic.layout.label"></label>
             <div class="col-sm-10">
                 <p class="text-muted" ng-i18next>
                     avAdmin.basic.layout.placeholder
@@ -41,7 +41,7 @@
 
         <!-- theme -->
         <div class="form-group">
-            <label class="col-sm-2" for="theme" ng-i18next="avAdmin.basic.theme.label"></label>
+            <label class="col-sm-2 control-label" for="theme" ng-i18next="avAdmin.basic.theme.label"></label>
             <div class="col-sm-10">
                 <p class="text-muted" ng-i18next>
                     avAdmin.basic.theme.placeholder
@@ -57,7 +57,7 @@
 
         <!-- share text -->
         <div class="form-group">
-            <label class="col-sm-2" for="share" ng-i18next="avAdmin.basic.share.label"></label>
+            <label class="col-sm-2 control-label" for="share" ng-i18next="avAdmin.basic.share.label"></label>
             <div class="col-sm-10">
                 <textarea id="share" class="form-control" ng-i18next="[placeholder]avAdmin.basic.share.placeholder" ng-model="election.presentation.share_text"></textarea>
             </div>
