--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -11,7 +11,7 @@
     <form role="form" class="form form-horizontal">
         <!-- Registration -->
         <div class="form-group">
-            <label class="col-sm-2" ng-i18next>
+            <label class="col-sm-2 control-label" ng-i18next>
               avAdmin.census.reg.label
             </label>
             <div class="col-sm-10">
