fixing extra fields  and dividing into twu census config and management

--- a/avAdmin/admin-directives/elauth/elauth.html
+++ b/avAdmin/admin-directives/elauth/elauth.html
@@ -44,5 +44,5 @@
         </div>
     </form>
 
-    <button ui-sref="admin.create()" ng-if="!election.id" class="btn btn-block btn-success" ng-i18next>next</button>
+    <button ui-sref="admin.censusConfig()" ng-if="!election.id" class="btn btn-block btn-success" ng-i18next>next</button>
 </div>
