--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
   <script src="avAdmin/admin-directives/create/create.js" class="app"></script>
   <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus-config/elcensus-config.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
   <script src="avAdmin/admin-directives/elbasic/elbasic.js" class="app"></script>
   <script src="avAdmin/admin-directives/elauth/elauth.js" class="app"></script>
