--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -14,6 +14,7 @@
         <div av-admin-import ng-switch-when="admin.import"></div>
         <div av-admin-elbasic ng-switch-when="admin.basic"></div>
         <div av-admin-elquestions ng-switch-when="admin.questions"></div>
+        <div av-admin-elcensus-config ng-switch-when="admin.censusConfig"></div>
         <div av-admin-elcensus ng-switch-when="admin.census"></div>
         <div av-admin-elauth ng-switch-when="admin.auth"></div>
         <div av-admin-eltally ng-switch-when="admin.tally"></div>
