--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -13,7 +13,7 @@
                 <i class="fa fa-sw fa-2x fa-circle" ng-if="index < $index"></i>
             </div>
             <div class="small" ng-i18next ng-if="index != $index">{{ status }}</div>
-            <button ng-click="doAction($index)" class="actionbtn btn btn-success" ng-if="index == $index && nextaction">
+            <button ng-click="doActionConfirm($index)" class="actionbtn btn btn-success" ng-if="index == $index && nextaction">
                 <div class="small" ng-i18next>{{ nextaction }}</div>
                 <strong ng-i18next>avAdmin.dashboard.donow</strong>
             </button>
@@ -76,20 +76,33 @@
             </div>
 
             <div class="well text-right">
-                <a ui-sref="election.public.show.home({ id: election.id })" ng-i18next>avAdmin.dashboard.electionPublic</a><br/>
-                <a ui-sref="election.booth-nohmac({ id: election.id })" ng-i18next>
+                <a
+                  ui-sref="election.public.show.home({ id: election.id })"
+                  target="_blank"
+                  ng-i18next>
+                  avAdmin.dashboard.electionPublic
+                </a>
+                <br/>
+                <a
+                  ui-sref="election.booth-nohmac({ id: election.id })"
+                  target="_blank"
+                  ng-i18next>
                     avAdmin.dashboard.preview
-                </a><br/>
-                <a ng-if="election.results.questions"
-                   ui-sref="election.results({ id: election.id })" ng-i18next>
-                   avAdmin.dashboard.publicResultsUrl
+                </a>
+                <br/>
+                <a
+                  ng-if="election.results.questions"
+                  target="_blank"
+                  ui-sref="election.results({ id: election.id })"
+                  ng-i18next>
+                  avAdmin.dashboard.publicResultsUrl
                 </a>
                 <!--
                 <a href="">Embed election</a>
                 -->
             </div>
 
-            <button ng-click="doAction(index)" class="btn btn-block btn-lg btn-success" ng-if="nextaction" ng-i18next="{{ nextaction }}"></button>
+            <button ng-click="doActionConfirm(index)" class="btn btn-block btn-lg btn-success" ng-if="nextaction" ng-i18next="{{ nextaction }}"></button>
             <button class="btn btn-block btn-lg btn-warning" ng-if="intally">
                 <i class="fa fa-cog fa-spin fa-sw fa-2x"></i><br/>
                 <span ng-i18next="avAdmin.dashboard.doingtally"></span>
