--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus-config/elcensus-config.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/confirm-create-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/confirm-start-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/confirm-stop-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/confirm-tally-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/confirm-publish-results-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elbasic/elbasic.js" class="app"></script>
   <script src="avAdmin/admin-directives/elauth/elauth.js" class="app"></script>
   <script src="avAdmin/admin-directives/billinginfo/billinginfo.js" class="app"></script>
