--- a/avAdmin/admin-directives/elauth/elauth.html
+++ b/avAdmin/admin-directives/elauth/elauth.html
@@ -8,7 +8,12 @@
             <div class="col-sm-10">
                 <div class="radio" ng-repeat="a in auth">
                     <label>
-                        <input type="radio" name="auth" value="{{ a }}" ng-model="election.census.auth_method"/>
+                        <input
+                          type="radio"
+                          name="auth"
+                          value="{{ a }}"
+                          ng-disabled="!electionEditable()"
+                          ng-model="election.census.auth_method"/>
                         <span ng-i18next="avAdmin.auth.auths.{{ a }}"></span>
                     </label>
                 </div>
