--- a/avAdmin/admin-directives/elbasic/elbasic.html
+++ b/avAdmin/admin-directives/elbasic/elbasic.html
@@ -8,7 +8,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="title" ng-i18next="avAdmin.basic.title.label"></label>
             <div class="col-sm-10">
-                <input id="title" class="form-control" type="text" ng-i18next="[placeholder]avAdmin.basic.title.placeholder" ng-model="election.title"/>
+                <input
+                  id="title"
+                  class="form-control"
+                  type="text"
+                  ng-disabled="!electionEditable()"
+                  ng-i18next="[placeholder]avAdmin.basic.title.placeholder"
+                  ng-model="election.title"/>
             </div>
         </div>
 
@@ -16,7 +22,12 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
             <div class="col-sm-10">
-                <textarea id="desc" class="form-control" ng-i18next="[placeholder]avAdmin.basic.description.placeholder" ng-model="election.description"></textarea>
+                <textarea
+                  id="desc"
+                  class="form-control"
+                  ng-disabled="!electionEditable()"
+                  ng-i18next="[placeholder]avAdmin.basic.description.placeholder"
+                  ng-model="election.description"></textarea>
             </div>
         </div>
 
@@ -32,7 +43,12 @@
                 </p>
                 <div class="radio" ng-repeat="o in layouts">
                     <label>
-                        <input type="radio" name="layout" value="{{ o }}" ng-model="election.layout"/>
+                        <input
+                          type="radio"
+                          name="layout"
+                          ng-disabled="!electionEditable()"
+                          value="{{ o }}"
+                          ng-model="election.layout"/>
                         <span ng-i18next="avAdmin.basic.layouts.{{ o }}"></span>
                     </label>
                 </div>
@@ -48,7 +64,12 @@
                 </p>
                 <div class="radio" ng-repeat="o in themes">
                     <label>
-                        <input type="radio" name="theme" value="{{ o }}" ng-model="election.presentation.theme"/>
+                        <input
+                          type="radio"
+                          name="theme"
+                          ng-disabled="!electionEditable()"
+                          value="{{ o }}"
+                          ng-model="election.presentation.theme"/>
                         <span ng-i18next="avAdmin.basic.themes.{{ o }}"></span>
                     </label>
                 </div>
@@ -59,7 +80,12 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="share" ng-i18next="avAdmin.basic.share.label"></label>
             <div class="col-sm-10">
-                <textarea id="share" class="form-control" ng-i18next="[placeholder]avAdmin.basic.share.placeholder" ng-model="election.presentation.share_text"></textarea>
+                <textarea
+                  id="share"
+                  class="form-control"
+                  ng-disabled="!electionEditable()"
+                  ng-i18next="[placeholder]avAdmin.basic.share.placeholder"
+                  ng-model="election.presentation.share_text"></textarea>
             </div>
         </div>
 
