--- a/avAdmin/admin-directives/question/question.html
+++ b/avAdmin/admin-directives/question/question.html
@@ -18,7 +18,13 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="title" ng-i18next="avAdmin.basic.title.label"></label>
                 <div class="col-sm-10">
-                    <input id="title" class="form-control" type="text" ng-i18next="[placeholder]avAdmin.basic.title.placeholder" ng-model="q.title"/>
+                    <input
+                      id="title"
+                      class="form-control"
+                      type="text"
+                      ng-disabled="!electionEditable()"
+                      ng-i18next="[placeholder]avAdmin.basic.title.placeholder"
+                      ng-model="q.title"/>
                 </div>
             </div>
 
@@ -26,7 +32,13 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="desc" ng-i18next="avAdmin.basic.description.label"></label>
                 <div class="col-sm-10">
-                    <textarea id="desc" class="form-control" ng-i18next="[placeholder]avAdmin.basic.description.placeholder" ng-model="q.description"></textarea>
+                    <textarea
+                    id="desc"
+                    class="form-control"
+                    ng-disabled="!electionEditable()"
+                    ng-i18next="[placeholder]avAdmin.basic.description.placeholder"
+                    ng-model="q.description">
+                    </textarea>
                 </div>
             </div>
 
@@ -36,7 +48,12 @@
                 <div class="col-sm-10">
                     <div class="radio" ng-repeat="o in vsystems">
                         <label>
-                            <input type="radio" name="voting" value="{{ o }}" ng-model="q.tally_type"/>
+                            <input
+                              type="radio"
+                              name="voting"
+                              value="{{ o }}"
+                              ng-disabled="!electionEditable()"
+                              ng-model="q.tally_type"/>
                             <span ng-i18next="avAdmin.questions.votings.{{ o }}"></span>
                         </label>
                     </div>
@@ -54,7 +71,15 @@
                             <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                         </button>
                       </span>
-                      <input type="text" id="max" name="max" min=0 step=1 class="form-control" ng-model="q.num_winners" required/>
+                      <input
+                        type="text"
+                        id="max"
+                        name="max"
+                        min=0 step=1
+                        class="form-control"
+                        ng-disabled="!electionEditable()"
+                        ng-model="q.num_winners"
+                        required/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button" ng-click="incOpt($index, 'num_winners', 1)">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -75,7 +100,16 @@
                             <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                         </button>
                       </span>
-                      <input type="text" id="max" name="max" min=0 step=1 class="form-control" ng-model="q.min" required/>
+                      <input
+                        type="text"
+                        id="max"
+                        name="max"
+                        min=0
+                        step=1
+                        class="form-control"
+                        ng-model="q.min"
+                        ng-disabled="!electionEditable()"
+                        required/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button" ng-click="incOpt($index, 'min', 1)">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -96,7 +130,16 @@
                             <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                         </button>
                       </span>
-                      <input type="text" id="max" name="max" min=0 step=1 class="form-control" ng-model="q.max" required/>
+                      <input
+                        type="text"
+                        id="max"
+                        name="max"
+                        min=0
+                        step=1
+                        class="form-control"
+                        ng-disabled="!electionEditable()"
+                        ng-model="q.max"
+                        required/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button" ng-click="incOpt($index, 'max', 1)">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -112,7 +155,13 @@
                 <div class="col-sm-10">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" id="random" name="random" value="false" ng-model="q.randomize_answer_order"/>
+                            <input
+                              type="checkbox"
+                              id="random"
+                              name="random"
+                              value="false"
+                              ng-disabled="!electionEditable()"
+                              ng-model="q.randomize_answer_order"/>
                             <span ng-i18next>avAdmin.questions.random.placeholder</span>
                         </label>
                     </div>
@@ -132,11 +181,15 @@
                         <div class="row option" ng-repeat="a in q.answers">
                             <div class="col-sm-10">{{ a.text }}</div>
                             <div class="col-sm-2 buttons text-right">
-                                <i class="fa fa-times fa-sw" ng-click="delOption($parent.$index, $index)"></i>
+                                <i
+                                  class="fa fa-times fa-sw"
+                                  ng-if="electionEditable()"
+                                  ng-click="delOption($parent.$index, $index)">
+                                </i>
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row" ng-if="electionEditable()">
                             <div class="col-sm-12 newopt">
                                 <div class="input-group">
                                   <input type="text" id="newopt" class="form-control" ng-enter="addOption($index)" ng-i18next="[placeholder]avAdmin.questions.newopt"/>
