--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
   <script src="avAdmin/admin-directives/dashboard/confirm-stop-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/confirm-tally-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/confirm-publish-results-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/send-auth-codes-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elbasic/elbasic.js" class="app"></script>
   <script src="avAdmin/admin-directives/elauth/elauth.js" class="app"></script>
   <script src="avAdmin/admin-directives/billinginfo/billinginfo.js" class="app"></script>
