--- a/avAdmin/admin-directives/dashboard/send-auth-codes-modal.html
+++ b/avAdmin/admin-directives/dashboard/send-auth-codes-modal.html
@@ -20,27 +20,27 @@
   <!-- SMS conf -->
   <div class="container-fluid">
     <div class="row">
-      <div class="well" ng-if="election.census.auth_method == 'sms'">
+      <div ng-if="election.census.auth_method == 'sms'">
           <div class="form-group">
-              <label class="col-sm-2 control-label" ng-i18next="avAdmin.auth.sms"></label>
-              <div class="col-sm-10">
+              <label class="col-xs-2 control-label" ng-i18next="avAdmin.auth.sms"></label>
+              <div class="col-xs-10">
                   <p class="text-muted" ng-i18next> avAdmin.auth.smstemp </p>
                   <textarea class="form-control" ng-model="election.census.config.msg"></textarea>
               </div>
           </div>
       </div>
-
       <!-- Email conf -->
-      <div class="well" ng-if="election.census.auth_method == 'email'">
+      <div ng-if="election.census.auth_method == 'email'">
           <div class="form-group">
-              <label class="col-sm-2 control-label" ng-i18next="avAdmin.auth.emailsub"></label>
-              <div class="col-sm-10">
+              <label class="col-xs-2 control-label" ng-i18next="avAdmin.auth.emailsub"></label>
+              <div class="col-xs-10">
                   <input type="text" class="form-control" ng-model="election.census.config.subject"/>
               </div>
           </div>
+          <div class="clearfix"></div>
           <div class="form-group">
-              <label class="col-sm-2 control-label" ng-i18next="avAdmin.auth.email"></label>
-              <div class="col-sm-10">
+              <label class="col-xs-2 control-label" ng-i18next="avAdmin.auth.email"></label>
+              <div class="col-xs-10">
                   <p class="text-muted" ng-i18next> avAdmin.auth.emailtemp </p>
                   <textarea class="form-control" ng-model="election.census.config.msg"></textarea>
               </div>
