--- a/avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.html
+++ b/avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.html
@@ -55,7 +55,7 @@
             <div class="col-xs-12">
               <h3>{{election.questions[1].title}}</h3>
             </div>
-            <div class="col-xs-{{12/election.questions[1].answers.length}}" ng-repeat="answer in election.questions[1].answers">
+            <div class="col-xs-12 col-sm-{{12/election.questions[1].answers.length}}" ng-repeat="answer in election.questions[1].answers">
               <div class="opt" ng-click="toggleOption(1, $index)">
                 <span class="glyphicon"
                   ng-class="{'glyphicon-unchecked': election.questions[1].answers[$index].selected === -1,
