--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
   <!-- endof admin directives -->
 
   <script src="avAdmin/elections-api-service.js" class="app"></script>
+  <script src="avAdmin/must-extra-fields-service.js" class="app"></script>
   <script src="avAdmin/admin-plugins.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
