re-enabling admin footer, removed erroneously

--- a/avAdmin/admin-foot-directive/admin-foot-directive.html
+++ b/avAdmin/admin-foot-directive/admin-foot-directive.html
@@ -1,6 +1,6 @@
 <div class="adminfoot">
     <div class="container">
-        <div class="row hidden">
+        <div class="row">
             <div class="col-md-2 col-md-offset-1">
                 <h3 ng-i18next="avAdmin.foot.contact"></h3>
                 <ul>
