fixing remove user

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -35,7 +35,7 @@
               </span>
             </a>
           </li>
-          <li ng-if="election.census.voters.length && !election.id">
+          <li ng-if="election.census.voters.length">
             <a ng-click="removeSelected()">
               <i class="fa fa-download"></i>
               <span ng-i18next>
