adding import dnd support

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js' class="lib"></script>
   <script type='text/javascript' src='bower_components/papaparse/papaparse.min.js' class="lib"></script>
   <script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js" class="lib"></script>
+  <script src="bower_components/ng-file-upload/angular-file-upload.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
