--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <script src="avUi/state-data-service.js" class="app"></script>
   <script src="avUi/autoscroll-down-directive.js" class="app"></script>
   <script src="avUi/add-target-blank-filter.js" class="app"></script>
+  <script src="avUi/html-to-text-filter.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
