--- a/avAdmin/admin-directives/elections/elections.html
+++ b/avAdmin/admin-directives/elections/elections.html
@@ -31,7 +31,7 @@
               <a ui-sref="admin.dashboard({id: election.id})">
                 <strong>{{ election.title }}</strong>
                 <div
-                  ng-bind-html="election.description | truncate:150 | htmlToText">
+                  ng-bind-html="election.description | htmlToText | truncate:150">
                 </div>
               </a>
             </td>
