--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -16,7 +16,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="{{ef.name}}"
+                placeholder="{{ef.name | htmlToText}}"
                 ng-model="newcensus[ef.name]"/>
             </div>
             <button
@@ -32,7 +32,7 @@
           <p class="text-muted">
             <span ng-i18next>eg</span>
             <span ng-repeat="ef in election.census.extra_fields">
-              {{ ef.name }}<span ng-if="!$last">;<span>
+              {{ ef.name | htmlToText }}<span ng-if="!$last">;<span>
             </span>
           </p>
           <form class="form">
@@ -133,7 +133,7 @@
           avAdmin.census.idColumnHeader
         </th>
         <th ng-repeat="field in election.census.extra_fields">
-          {{ field.name }}
+          {{ field.name| htmlToText }}
         </th>
         <th ng-i18next>
           avAdmin.census.selectedColumnHeader
