Fixed min-height for admin plugins

--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -7,6 +7,7 @@
       <div av-admin-sidebar id="sidebar" class="col-sm-3">
       </div>
       <div
+        ng-if="noplugin"
         ng-switch="state"
         id="content"
         class="col-sm-9 admin-controller-content">
