--- a/avAdmin/admin-login-controller/admin-login-controller.html
+++ b/avAdmin/admin-login-controller/admin-login-controller.html
@@ -1,6 +1,6 @@
 <div av-admin-head nologin></div>
 
-<div av-login event-id="0">
+<div av-login event-id="{{ authId }}">
 </div>
 
 <div av-admin-foot class="hidden-xs"></div>
