parametrization of tlf in the footer

--- a/avAdmin/admin-foot-directive/admin-foot-directive.html
+++ b/avAdmin/admin-foot-directive/admin-foot-directive.html
@@ -6,7 +6,7 @@
                 <ul>
                     <li><a href="" ng-i18next="avAdmin.foot.contactsupport"></a></li>
                     <li><a href="" ng-i18next="avAdmin.foot.contactsales"></a></li>
-                    <li><span ng-i18next="avAdmin.foot.callsales"></span><br/>+34 666 666 666</li>
+                    <li><span ng-i18next="avAdmin.foot.callsales"></span><br/>{{contact.tlf}}</li>
                 </ul>
                 <!-- social links -->
                 <div class="social">
